Fix footer links on mobile

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -284,6 +284,8 @@ footer {
   }
 
   > ul {
+    position: relative;
+    z-index: 1;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -302,7 +304,6 @@ footer {
     padding: 100px 0;
 
     > ul {
-      z-index: 1;
       position: absolute;
       bottom: 50px;
       left: 50%;
